--- a/IMDB_Movie_List_Project/IMDB_Movie_List_Project.ipynb
+++ b/IMDB_Movie_List_Project/IMDB_Movie_List_Project.ipynb
@@ -165,7 +165,7 @@
     "import plotly.express as px\n",
     "\n",
     "# Veri setini yükle\n",
-    "df_original = pd.read_csv(\"IMDB_Data.csv\", index_col=\"Title\")\n",
+    "df_original = pd.read_csv(\"IMDB_Movie_List_Data.csv\", index_col=\"Title\")\n",
     "\n",
     "# Veri setinin üzerinde çalışmak için bir kopyasını oluştur\n",
     "df = df_original.copy()"
